--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,6 +2,7 @@ include setup.py
 recursive-include docs *.rst *.py *.html *.css *.js *.png
 recursive-include tests *.py
 include tox.ini
+include .travis.yml
 include README.rst
 include LICENSE
 include VERSION
